Sat Jun 13 17:39:07 CEST 2009 Guido Günther <agx@sigxcpu.org>

	* src/krb5-auth-applet.c (ka_applet_create_context_menu): use
	gtk_image_menu_item_new_from_stock for stock menu entries

Sat Jun 13 17:14:34 CEST 2009 Guido Günther <agx@sigxcpu.org>

	* po/krb5-auth-dialog.pot: remove 
	* po/.gitignore: ignore generated krb5-auth-dialog.pot
	BZ: #585635

Fri Jun 12 18:30:03 CEST 2009 Guido Günther <agx@sigxcpu.org>

	add DBus API to destroy ccache
	* src/krb5-auth-applet-dbus.xml: add method
	* src/krb5-auth-dialog.h: rename ka_dbus_destroy_cache to
	  ka_dbus_destroy_ccache, change return value
	* src/krb5-auth-dialog.c: likewise
	* src/krb5-auth-dbus.h (ka_dbus_destroy_ccache): new protoype
	* src/krb5-auth-dbus.c (ka_dbus_destroy_ccache): new function
	* src/krb5-auth-applet.c (ka_applet_cb_destroy_ccache): use it
	  (ka_applet_create_context_menu): use it

Fri Jun 12 22:36:35 CEST 2009 Guido Günther <agx@sigxcpu.org>

	* src/krb5-auth-applet: use _("translator-credits") in about dialog
	* AUTHORS: add Christian Persch

Fri Jun 12 11:51:20 CEST 2009 Guido Günther <agx@sigxcpu.org>

	* preferences/krb5-auth-dialog-preferences.desktop.in: use
	  krb-valid-ticket icon instead of abusing gtk-dialog-authentication
	* preferences/krb5-auth-dialog-preferences.xml: likewise
	* src/krb5-auth-dialog.xml: likewise
	* src/krb5-auth-applet.c (ka_send_event_notificatyion): likewise
	  (ka_applet_update_status): use icons in notifications
	  (ka_applet_create): load uixml after calling
	  gtk_icon_theme_append_search_path
	  (ka_applet_setup_icons): use DATA_DIR instead of PKG_DATA_DIR
	  (ka_applet_cb_about_dialog): add "logo-icon-name"
	* src/krb5-auth-dialog.c: uixml parsing moved to ka_applet_create...
	* src/krb5-auth-applet.h: ...so drop unused parameter

Fri Jun 12 11:45:30 CEST 2009 Guido Günther <agx@sigxcpu.org>

	add scalable and 48x48 icons and move them from pkgdatadir to datadir.
	Makes using different icon themes easier.
	* configure.ac (AC_OUTPUT): add icon dirs