@@ -1,7 +1,12 @@
 /* Generated by hand via "cd etpo; make update-etpo" from /tmp/krb5-1.6.dfsg.4~beta1/ */
 #include <glib/gi18n.h>
 
+
 const char *dummy[] = {
+	/* Translators: files from dummy-strings.c are *all* possible errors
+           returned from Kerberos (since Kerberos itself doesn't handle i18n). If in
+	   doubt please translate strings from files starting with krb5-auth
+	   first since these are the ones the user will see in any case. */
 	N_("ASN.1 failed call to system time library"),	/* asn1_err.et:asn1:ASN1_BAD_TIMEFORMAT */
 	N_("ASN.1 structure is missing a required field"),	/* asn1_err.et:asn1:ASN1_MISSING_FIELD */
 	N_("ASN.1 unexpected field number"),	/* asn1_err.et:asn1:ASN1_MISPLACED_FIELD */
