@@ -1,3 +1,8 @@
+Sat Jun 13 18:03:26 CEST 2009 Guido Günther <agx@sigxcpu.org>
+
+	* src/dummy-strings.c: add note for translators
+	* etpo/lexer.l: likewise
+
 Sat Jun 13 17:39:07 CEST 2009 Guido Günther <agx@sigxcpu.org>
 
 	* src/krb5-auth-applet.c (ka_applet_create_context_menu): use
